--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         body, html {
             height: 100%;
             width: 100%;
-            background-color: #f4f4f9;
+            background-color: #f4f4f9; /* Light gray background */
             display: flex;
             justify-content: center;
             align-items: center;
         }
         .chat-container {
             width: 100%;
-            height: 100vh; /* Full screen height */
-            background: white;
+            height: 100vh;
+            background: #ffffff; /* White chatbot box */
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            border-radius: 0; /* Removed border-radius for full-page fit */
+            border-radius: 0;
             padding: 20px;
             display: flex;
             flex-direction: column;
@@ -33,18 +33,18 @@
             overflow: hidden;
         }
         .chat-header {
-            font-size: 18px; /* Increased font size */
+            font-size: 18px;
             font-weight: bold;
             text-align: center;
             padding-bottom: 15px;
             border-bottom: 2px solid #ddd;
-            color: black;
+            color: #333; /* Dark text */
         }
         .end-session {
             position: absolute;
             top: 10px;
             right: 15px;
-            background-color: red;
+            background-color: #ff4d4d; /* Soft red */
             color: white;
             border: none;
             padding: 8px 15px;
@@ -69,17 +69,19 @@
             font-size: 16px;
         }
         .user-message {
-            background-color: #007bff;
+            background-color: #007bff; /* Blue for user messages */
             color: white;
             align-self: flex-end;
             text-align: right;
             cursor: default;
+            border-radius: 10px 10px 0 10px;
         }
         .bot-message {
-            background-color: #e5e5ea;
+            background-color: #e5e5ea; /* Soft gray for bot messages */
             color: black;
             align-self: flex-start;
             text-align: left;
+            border-radius: 10px 10px 10px 0;
         }
         .selectable {
             background-color: #e5e5ea;
@@ -146,7 +148,6 @@
         function selectMyth(option, selectedMyth) {
             let chatBox = document.getElementById("chat-box");
 
-            // Add user message (selected myth)
             let userMessage = document.createElement("div");
             userMessage.className = "user-message message";
             userMessage.innerHTML = selectedMyth;
@@ -156,16 +157,11 @@
             let typingTime = 2000;
 
             if (option === 1) {
-                response = "✅ <b>Fact:</b> Unless Business Relief is available in full, the value (or part) of a business can be charged to IHT, creating a significant liability.<br><br>" +
-                           "For example, if you have grown a £50m business that you would like to transfer either as part of retirement or estate planning and have not made use of Business Relief, this could create a 40% IHT liability of £20m.";
-            } 
-            else if (option === 2) {
-                response = "✅ <b>Fact:</b> Gifts of chargeable assets (such as shares and property) during your lifetime are also exposed to capital gains tax (CGT), risking a significant tax charge if the value of the asset has risen since you acquired it.<br><br>" +
-                           "There are also anti-avoidance provisions to prevent you from retaining benefits from gifted assets, or assets acquired via gifts of cash, so lifetime gifts can require careful thought to be an important part of IHT planning.";
-            } 
-            else if (option === 3) {
-                response = "✅ <b>Fact:</b> Gifts of capital between you and another person are deemed potentially exempt transfers (PET) for IHT and do require you to survive seven years from the date of the gift.<br><br>" +
-                           "However, not all gifts are PET, and you may have scope to make immediately exempt gifts if that is appropriate for your situation and wishes.";
+                response = "✅ <b>Fact:</b> Unless Business Relief is available in full, the value (or part) of a business can be charged to IHT, creating a significant liability.";
+            } else if (option === 2) {
+                response = "✅ <b>Fact:</b> Gifts of chargeable assets (such as shares and property) during your lifetime are also exposed to capital gains tax (CGT), risking a significant tax charge.";
+            } else if (option === 3) {
+                response = "✅ <b>Fact:</b> Gifts of capital between you and another person are deemed potentially exempt transfers (PET) for IHT.";
             }
 
             let typingIndicator = document.createElement("div");
@@ -177,25 +173,16 @@
 
             setTimeout(() => {
                 typingIndicator.remove();
-
                 let botMessage = document.createElement("div");
                 botMessage.className = "bot-message message";
                 botMessage.innerHTML = response;
                 chatBox.appendChild(botMessage);
-
                 showMyths();
             }, typingTime);
         }
 
-        function autoScroll() {
-            let chatBox = document.getElementById("chat-box");
-            setTimeout(() => {
-                chatBox.scrollTop = chatBox.scrollHeight;
-            }, 100);
-        }
-
         function resetChat() {
-            initializeChat(); // Reset chat completely to the original state
+            initializeChat();
         }
 
         initializeChat();
