--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         }
         .chat-container {
             width: 100%;
-            height: 100vh; /* Full screen height */
+            height: 100vh;
             background: white;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            border-radius: 0; /* Removed border-radius for full-page fit */
+            border-radius: 10px; /* Added rounded corners */
+            border: 2px solid #ccc; /* Added boundary around chatbot */
             padding: 20px;
             display: flex;
             flex-direction: column;
@@ -33,7 +34,7 @@
             overflow: hidden;
         }
         .chat-header {
-            font-size: 18px; /* Increased font size */
+            font-size: 18px;
             font-weight: bold;
             text-align: center;
             padding-bottom: 15px;
