--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body, html {
             height: 100%;
             width: 100%;
-            background-color: #f4f4f9;
+            background-color: white; /* Changed background to white */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -23,7 +23,7 @@
         .chat-container {
             width: 100%;
             max-width: 700px;
-            height: 80vh;
+            height: 85vh; /* Increased height slightly to reduce scrolling */
             background: white;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
             border-radius: 10px;
@@ -119,14 +119,29 @@
             initializeChat();
         });
 
+        let myths = [
+            "1️⃣ Myth: Surviving the 'seven-year clock' is all I have to worry about.",
+            "2️⃣ Myth: I have to wait seven years for a gift to be outside my estate for IHT.",
+            "3️⃣ Myth: I won’t pay any IHT on my business or company.",
+            "4️⃣ Myth: My spouse or civil partner is always exempt from IHT.",
+            "5️⃣ Myth: Inheritance tax planning is a one-time activity.",
+            "6️⃣ Myth: Inheritance tax planning is only about property."
+        ];
+
+        let responses = [
+            "✅ Fact: Surviving seven years can make a gift IHT-exempt, but Capital Gains Tax (CGT) may still apply. If the gifted asset has risen in value, you might face a CGT bill before IHT even comes into play. There are also anti-avoidance rules that prevent you from benefiting from gifted assets, meaning careful planning is key.",
+            "✅ Fact: While many gifts require a seven-year wait to become IHT-free, some are immediately exempt. Gifts to UK charities, gifts out of regular income, and certain exemptions mean you don’t always have to wait.",
+            "✅ Fact: Business Relief may reduce or eliminate IHT on a business, but it is not automatic. The business must meet strict trading requirements, and certain assets may still be taxable. If Business Relief is unavailable or limited, a significant IHT liability could arise.",
+            "✅ Fact: Spouses and civil partners are generally exempt from IHT, but only if both are UK-domiciled. If one is non-domiciled, tax limitations apply. However, the surviving spouse may inherit unused IHT allowances, potentially increasing their tax-free threshold.",
+            "✅ Fact: IHT planning isn’t a one-time event. Changes in tax laws, personal circumstances, and financial markets mean your strategy should be reviewed regularly to stay tax-efficient and compliant.",
+            "✅ Fact: While property plays a significant role in IHT, other assets like investments, savings, and personal belongings are also taxed. A holistic approach ensures all assets are considered in your estate planning."
+        ];
+
         function initializeChat() {
             let chatBox = document.getElementById("chat-box");
-            if (!chatBox) return; // Ensure the chat-box exists
-
             chatBox.innerHTML = `
                 <div class="bot-message message">Welcome to the <b>Inheritance Tax MythBuster!</b> I’m here to help you separate fact from fiction when it comes to inheritance tax. Select a myth below, and I’ll provide you with accurate information.</div>
             `;
-
             showMyths();
         }
 
@@ -135,15 +150,6 @@
             let optionsDiv = document.createElement("div");
             optionsDiv.id = "options";
             chatBox.appendChild(optionsDiv);
-
-            let myths = [
-                "1️⃣ Myth: Surviving the 'seven-year clock' is all I have to worry about.",
-                "2️⃣ Myth: I have to wait seven years for a gift to be outside my estate for IHT.",
-                "3️⃣ Myth: I won’t pay any IHT on my business or company.",
-                "4️⃣ Myth: My spouse or civil partner is always exempt from IHT.",
-                "5️⃣ Myth: Inheritance tax planning is a one-time activity.",
-                "6️⃣ Myth: Inheritance tax planning is only about property."
-            ];
 
             myths.forEach((myth, index) => {
                 let mythOption = document.createElement("div");
@@ -166,15 +172,6 @@
             userMessage.innerHTML = selectedMyth;
             chatBox.appendChild(userMessage);
 
-            let responses = [
-                "✅ Fact: Surviving seven years can make a gift IHT-exempt, but Capital Gains Tax (CGT) may still apply. If the gifted asset has risen in value, you might face a CGT bill before IHT even comes into play. There are also anti-avoidance rules that prevent you from benefiting from gifted assets, meaning careful planning is key.",
-                "✅ Fact: While many gifts require a seven-year wait to become IHT-free, some are immediately exempt. Gifts to UK charities, gifts out of regular income, and certain exemptions mean you don’t always have to wait.",
-                "✅ Fact: Business Relief may reduce or eliminate IHT on a business, but it is not automatic. The business must meet strict trading requirements, and certain assets may still be taxable. If Business Relief is unavailable or limited, a significant IHT liability could arise.",
-                "✅ Fact: Spouses and civil partners are generally exempt from IHT, but only if both are UK-domiciled. If one is non-domiciled, tax limitations apply. However, the surviving spouse may inherit unused IHT allowances, potentially increasing their tax-free threshold.",
-                "✅ Fact: IHT planning isn’t a one-time event. Changes in tax laws, personal circumstances, and financial markets mean your strategy should be reviewed regularly to stay tax-efficient and compliant.",
-                "✅ Fact: While property plays a significant role in IHT, other assets like investments, savings, and personal belongings are also taxed. A holistic approach ensures all assets are considered in your estate planning."
-            ];
-
             let typingIndicator = document.createElement("div");
             typingIndicator.className = "bot-message message typing-indicator";
             typingIndicator.innerHTML = "MythBuster is typing...";
@@ -190,7 +187,12 @@
                 botMessage.innerHTML = responses[index];
                 chatBox.appendChild(botMessage);
 
-                showMyths();
+                myths.splice(index, 1); // Remove selected myth
+                responses.splice(index, 1); // Remove corresponding response
+
+                if (myths.length > 0) {
+                    showMyths();
+                }
             }, 2000);
         }
 
@@ -202,6 +204,7 @@
         }
 
         function resetChat() {
+            myths = [...myths];
             initializeChat();
         }
     </script>
